--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scraper.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
+    "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "nodemailer": "^7.0.5",
+    "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.3.6",
